argocd/apps/mediawiki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki
  template:
    metadata:
      labels:
        app: mediawiki
    spec:
      containers:
      - name: mediawiki
        image: mediawiki:1.39
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki
  namespace: default
spec:
  selector:
    app: mediawiki
  ports:
  - port: 80
    targetPort: 80
