argocd/apps/mediawiki/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-mysql
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki-mysql
  template:
    metadata:
      labels:
        app: mediawiki-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-mysql
  namespace: default
spec:
  selector:
    app: mediawiki-mysql
  ports:
  - port: 3306
    targetPort: 3306
