argocd/apps/mediawiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediawiki-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: mediawiki.cluster.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mediawiki
            port:
              number: 80
